--- a/hello.html
+++ b/hello.html
@@ -1,3 +1,12 @@
-Hello world!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+</head>
+<body>
+	
+	Hello world!
 
-Added new line
+</body>
+</html>
