--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,19 @@
 	<title>Document</title>
 </head>
 <body>
+
+	<div class="header">
+		<a href="#" class="logo">LOGO</a>
+		<ul class="menu">
+			<li>
+				<a href="#">Menu item 1</a>
+				<a href="#">Menu item 2</a>
+				<a href="#">Menu item 3</a>
+				<a href="#">Menu item 4</a>
+				<a href="#">Menu item 5</a>
+			</li>
+		</ul>
+	</div>
 	
 	Hello world!
 
