--- a/hello.html
+++ b/hello.html
@@ -19,9 +19,9 @@
 		</ul>
 	</div>
 	
-	Hello world!
-
-	added text line
+	<div class="sidebar">
+		sidebar
+	</div>
 
 	<footer>Lorem ipsum dum corporis perspiciatis quidem. Odio, quo, quia.</footer>
 
