--- a/hello.html
+++ b/hello.html
@@ -19,10 +19,9 @@
 		</ul>
 	</div>
 	
-	Hello world!
-
-	added text line
-
+	<div class="main">
+		main
+	</div>
 	<footer>Lorem ipsum dum corporis perspiciatis quidem. Odio, quo, quia.</footer>
 
 </body>
